sandc/test/fixtures/astRegression/shouldFail/productions/ifInlineTypeGuard/EmptyIfBody.sand
pub class EmptyIfBody {
    foo() {
        (
            if let inline a = b() {
                
            } else {
                c()
            }
        )
    }
}